--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,15 @@
     "pay",
     "payment",
     "purchase",
-    "Sogenactif"
+    "Sogenactif",
+    "Attendize"
   ],
-  "homepage": "https://github.com/GValFr35/omnipay-sogenactif",
+  "homepage": "https://github.com/storca/omnipay-sogenactif",
   "license": "MIT",
   "authors": [
     {
-      "name": "Valéry Gouleau",
-      "email": "v.gouleau@cyim.com"
+      "name": "storca",
+      "email": "storca@mail.com"
     }
   ],
   "autoload": {
@@ -28,13 +29,7 @@
     },
     "require-dev": {
         "omnipay/tests": "^3",
-        "squizlabs/php_codesniffer": "^3",
-        "phpro/grumphp": "^0.14.0"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.0.x-dev"
-        }
+        "squizlabs/php_codesniffer": "^3"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
