--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,4 +1,15 @@
 parameters:
     git_dir: .
     bin_dir: vendor/bin
-    tasks: {  }
+    tasks:
+        phpunit:
+            config_file: ~
+            testsuite: ~
+            group: []
+            always_execute: false
+        phpcs:
+            standard: PSR2
+            warning_severity: ~
+            ignore_patterns:
+              - tests/
+            triggered_by: [php]
